--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -7,116 +7,173 @@
 <ion-content>
 
   <ion-searchbar>searchbar</ion-searchbar>
-  <ion-button>button</ion-button>
 
-<ion-input type="date" name="" id=""></ion-input>
-<ion-input type="datetime" name="" id="">   </ion-input>
+    <ion-item>
+      <ion-label>วันที่</ion-label>
+      <ion-input type="date"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>เวลา</ion-label>
+      <ion-datetime display-format="HH:mm" value="2020-03-31T06:00Z" display-timezone="utc"></ion-datetime>
+    </ion-item>
 
-<ion-item>
-  <ion-label>Todo</ion-label>
-  <ion-input type="text"  name="title"></ion-input>
-</ion-item>
+  <ion-list>
+    <ion-item>
+      <ion-label position="fixed">Input</ion-label>
+      <ion-input type="text" name="title"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="fixed">Inputtttttttttttt</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+  </ion-list>
 
-<ion-item>
-  <ion-label>Tododddddddddd</ion-label>
-  <ion-input type="text"  name="title"></ion-input>
-</ion-item>
+    <ion-radio-group>
+      <ion-list-header>
+        <ion-label>
+          เลือกหมวดอย่างใดอย่างหนึ่ง
+        </ion-label>
+      </ion-list-header>
+      <ion-item>
+        <ion-radio value="true"></ion-radio>
+        <ion-label>Packard</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-radio value="false"></ion-radio>
+        <ion-label>Studebaker</ion-label>
+      </ion-item>
+    </ion-radio-group>
 
-<ion-list>
+    <ion-item>
+      <ion-label>Checkbox1</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Checkbox2</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Checkbox3</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
+
   <ion-item>
-    <ion-label>Input</ion-label>
-    <ion-input></ion-input>
+    <ion-label>เลือกชั้น เลือกห้อง</ion-label>
+    <ion-select value="notifications" interface="action-sheet">
+      <ion-select-option value="enable">1</ion-select-option>
+      <ion-select-option value="mute">2</ion-select-option>
+      <ion-select-option value="mute_week">3</ion-select-option>
+      <ion-select-option value="mute_year">4</ion-select-option>
+    </ion-select>
   </ion-item>
-  <ion-item>
-    <ion-label>Toggle</ion-label>
-    <ion-toggle slot="end"></ion-toggle>
-  </ion-item>
-  <ion-item>
-    <ion-label>Radio</ion-label>
-    <ion-radio slot="end"></ion-radio>
-  </ion-item>
-  <ion-item>
-    <ion-label>Checkbox</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-  </ion-item>
-</ion-list>
 
-<ion-grid>
-  <ion-row>
-    <ion-col>
-      ion-col
-    </ion-col>
-    <ion-col>
-      ion-col
-    </ion-col>
-  </ion-row>
-
-  <ion-row>
-    <ion-col>
-      ion-col
-    </ion-col>
-    <ion-col>
-      ion-col
-    </ion-col>
-  </ion-row>
-</ion-grid>
+  <ion-button>บันทึก/ยืนยัน/ถัดไป</ion-button>
+  <ion-button color="danger">ยกเลิก</ion-button>
+  <ion-button color="warning">แก้ไข</ion-button>
 
 
-<div>
-  <table pedding>
-    <thead class="bgb">
-      <tr>
-        <th>No.</th>
-        <th width="150">RM N.</th>
-        <th width="250">GuestName</th>
-        <th>Pax</th>
-        <th width="150">Arrival</th>
-        <th width="150">TimeIn</th>
-        <th width="150">Departure</th>
-        <th width="150">TimeOut</th>
-        <th>Nationality</th>
-        <th width="150">Company</th>
-        <th>RMRate</th>
-        <th>ABF</th>
-        <th width="250">Remark</th>
-      </tr>
-    </thead>
+  <ion-card>
+    <ion-card-header>
+      <ion-row text-center>
+        <ion-col col-2>
+          ไอดี
+        </ion-col>
+        <ion-col col-3>
+          ชื่อ - สกุล
+        </ion-col>
+        <ion-col col-3>
+          Full Name
+        </ion-col>
+        <ion-col col-3>
+          เบอร์โทรศัพท์
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+  </ion-card>
 
-    <tbody *ngFor="let member of GuestRegists;let i = index">
-      <tr>
-        <td>{{i+1}}</td>
-        <td width="150">{{ member.roomNo }}</td>
-        <td width="250">{{ member.name }}</td>
-        <td>{{ member.pax }}</td>
-        <td width="150">{{ member.arriveDate }}</td>
-        <td width="150">{{ member.arriveTime }}</td>
-        <td width="150">{{ member.departureDate }}</td>
-        <td width="150">{{ member.departureTime }}</td>
-        <td>{{ member.nationality }}</td>
-        <td width="150">{{ member.company }}</td>
-        <td>{{ member.roomrate }}</td>
-        <td>{{ member.abf }}</td>
-        <td width="250">{{ member.remark }}</td>
-      </tr>
-    </tbody>
+  <ion-card>
+    <ion-card-content>
+    <ion-row>
+      <ion-col col-2>
+        ไอดี
+      </ion-col>
+      <ion-col col-3>
+        ชื่อ - สกุล
+      </ion-col>
+      <ion-col col-3>
+        Full Name
+      </ion-col>
+      <ion-col col-3>
+        เบอร์โทรศัพท์
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-2>
+        ไอดี
+      </ion-col>
+      <ion-col col-3>
+        ชื่อ - สกุล
+      </ion-col>
+      <ion-col col-3>
+        Full Name
+      </ion-col>
+      <ion-col col-3>
+        เบอร์โทรศัพท์
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-2>
+        ไอดี
+      </ion-col>
+      <ion-col col-3>
+        ชื่อ - สกุล
+      </ion-col>
+      <ion-col col-3>
+        Full Name
+      </ion-col>
+      <ion-col col-3>
+        เบอร์โทรศัพท์
+      </ion-col>
+    </ion-row>
+    </ion-card-content>
+  </ion-card>
 
-    <tbody>
-       <tr>
-        <td></td>
-        <td width="150"></td>
-        <td width="250"></td>
-        <td>11</td>
-        <td width="150"></td>
-        <td width="150"></td>
-        <td width="150"></td>
-        <td width="150"></td>
-        <td></td>
-        <td width="150"></td>
-        <td>3300</td>
-        <td>11</td>
-        <td width="250"></td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+
+    <table pedding>
+      <thead>
+        <tr>
+          <th>No.</th>
+          <th width="150">RM N.</th>
+          <th width="250">GuestName</th>
+          <th>Pax</th>
+          <th width="150">Arrival</th>
+          <th width="150">TimeIn</th>
+          <th width="150">Departure</th>
+          <th width="150">TimeOut</th>
+          <th>Nationality</th>
+          <th width="150">Company</th>
+          <th>RMRate</th>
+          <th>ABF</th>
+          <th width="250">Remark</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>x</td>
+          <td width="150">xxx</td>
+          <td width="250">xxx</td>
+          <td>xxx</td>
+          <td width="150">123</td>
+          <td width="150">123</td>
+          <td width="150">xxx</td>
+          <td width="150">xxx</td>
+          <td>xxx</td>
+          <td width="150">xxx</td>
+          <td>xxx</td>
+          <td>xxx</td>
+          <td width="250">xxx</td>
+        </tr>
+      </tbody>
+    </table>
 </ion-content>
