--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -8,19 +8,19 @@
 
   <ion-searchbar>searchbar</ion-searchbar>
 
-    <ion-item>
-      <ion-label>วันที่</ion-label>
-      <ion-input type="date"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>เวลา</ion-label>
-      <ion-datetime display-format="HH:mm" value="2020-03-31T06:00Z" display-timezone="utc"></ion-datetime>
-    </ion-item>
+  <ion-item>
+    <ion-label>วันที่</ion-label>
+    <ion-input type="date"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label>เวลา</ion-label>
+    <ion-datetime display-format="HH:mm" value="2020-03-31T06:00Z" display-timezone="utc"></ion-datetime>
+  </ion-item>
 
   <ion-list>
     <ion-item>
       <ion-label position="fixed">Input</ion-label>
-      <ion-input type="text" name="title"></ion-input>
+      <ion-input type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="fixed">Inputtttttttttttt</ion-label>
@@ -28,42 +28,47 @@
     </ion-item>
   </ion-list>
 
-    <ion-radio-group>
-      <ion-list-header>
-        <ion-label>
-          เลือกหมวดอย่างใดอย่างหนึ่ง
-        </ion-label>
-      </ion-list-header>
+  <ion-radio-group>
+    <ion-list>
+      <ion-label>
+        เลือกอย่างใดอย่างหนึ่ง
+      </ion-label>
       <ion-item>
-        <ion-radio value="true"></ion-radio>
+        <ion-radio slot="start"></ion-radio>
         <ion-label>Packard</ion-label>
       </ion-item>
       <ion-item>
-        <ion-radio value="false"></ion-radio>
+        <ion-radio slot="start"></ion-radio>
         <ion-label>Studebaker</ion-label>
       </ion-item>
-    </ion-radio-group>
+    </ion-list>
+  </ion-radio-group>
 
-    <ion-item>
-      <ion-label>Checkbox1</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox2</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox3</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
+  <ion-list>
+    <ion-label>
+      เลือกได้หลายอย่าง
+    </ion-label>
+  <ion-item>
+    <ion-label>Checkbox1</ion-label>
+    <ion-checkbox slot="start"></ion-checkbox>
+  </ion-item>
+  <ion-item>
+    <ion-label>Checkbox2</ion-label>
+    <ion-checkbox slot="start"></ion-checkbox>
+  </ion-item>
+  <ion-item>
+    <ion-label>Checkbox3</ion-label>
+    <ion-checkbox slot="start"></ion-checkbox>
+  </ion-item>
+  </ion-list>
 
   <ion-item>
     <ion-label>เลือกชั้น เลือกห้อง</ion-label>
-    <ion-select value="notifications" interface="action-sheet">
-      <ion-select-option value="enable">1</ion-select-option>
-      <ion-select-option value="mute">2</ion-select-option>
-      <ion-select-option value="mute_week">3</ion-select-option>
-      <ion-select-option value="mute_year">4</ion-select-option>
+    <ion-select interface="action-sheet">
+      <ion-select-option>1</ion-select-option>
+      <ion-select-option>2</ion-select-option>
+      <ion-select-option>3</ion-select-option>
+      <ion-select-option>4</ion-select-option>
     </ion-select>
   </ion-item>
 
@@ -93,87 +98,87 @@
 
   <ion-card>
     <ion-card-content>
-    <ion-row>
-      <ion-col col-2>
-        ไอดี
-      </ion-col>
-      <ion-col col-3>
-        ชื่อ - สกุล
-      </ion-col>
-      <ion-col col-3>
-        Full Name
-      </ion-col>
-      <ion-col col-3>
-        เบอร์โทรศัพท์
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col col-2>
-        ไอดี
-      </ion-col>
-      <ion-col col-3>
-        ชื่อ - สกุล
-      </ion-col>
-      <ion-col col-3>
-        Full Name
-      </ion-col>
-      <ion-col col-3>
-        เบอร์โทรศัพท์
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col col-2>
-        ไอดี
-      </ion-col>
-      <ion-col col-3>
-        ชื่อ - สกุล
-      </ion-col>
-      <ion-col col-3>
-        Full Name
-      </ion-col>
-      <ion-col col-3>
-        เบอร์โทรศัพท์
-      </ion-col>
-    </ion-row>
+      <ion-row>
+        <ion-col col-2>
+          ไอดี
+        </ion-col>
+        <ion-col col-3>
+          ชื่อ - สกุล
+        </ion-col>
+        <ion-col col-3>
+          Full Name
+        </ion-col>
+        <ion-col col-3>
+          เบอร์โทรศัพท์
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-2>
+          ไอดี
+        </ion-col>
+        <ion-col col-3>
+          ชื่อ - สกุล
+        </ion-col>
+        <ion-col col-3>
+          Full Name
+        </ion-col>
+        <ion-col col-3>
+          เบอร์โทรศัพท์
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-2>
+          ไอดี
+        </ion-col>
+        <ion-col col-3>
+          ชื่อ - สกุล
+        </ion-col>
+        <ion-col col-3>
+          Full Name
+        </ion-col>
+        <ion-col col-3>
+          เบอร์โทรศัพท์
+        </ion-col>
+      </ion-row>
     </ion-card-content>
   </ion-card>
 
 
-    <table pedding>
-      <thead>
-        <tr>
-          <th>No.</th>
-          <th width="150">RM N.</th>
-          <th width="250">GuestName</th>
-          <th>Pax</th>
-          <th width="150">Arrival</th>
-          <th width="150">TimeIn</th>
-          <th width="150">Departure</th>
-          <th width="150">TimeOut</th>
-          <th>Nationality</th>
-          <th width="150">Company</th>
-          <th>RMRate</th>
-          <th>ABF</th>
-          <th width="250">Remark</th>
-        </tr>
-      </thead>
+  <table pedding>
+    <thead>
+      <tr>
+        <th>No.</th>
+        <th width="150">RM N.</th>
+        <th width="250">GuestName</th>
+        <th>Pax</th>
+        <th width="150">Arrival</th>
+        <th width="150">TimeIn</th>
+        <th width="150">Departure</th>
+        <th width="150">TimeOut</th>
+        <th>Nationality</th>
+        <th width="150">Company</th>
+        <th>RMRate</th>
+        <th>ABF</th>
+        <th width="250">Remark</th>
+      </tr>
+    </thead>
 
-      <tbody>
-        <tr>
-          <td>x</td>
-          <td width="150">xxx</td>
-          <td width="250">xxx</td>
-          <td>xxx</td>
-          <td width="150">123</td>
-          <td width="150">123</td>
-          <td width="150">xxx</td>
-          <td width="150">xxx</td>
-          <td>xxx</td>
-          <td width="150">xxx</td>
-          <td>xxx</td>
-          <td>xxx</td>
-          <td width="250">xxx</td>
-        </tr>
-      </tbody>
-    </table>
+    <tbody>
+      <tr>
+        <td>x</td>
+        <td width="150">xxx</td>
+        <td width="250">xxx</td>
+        <td>xxx</td>
+        <td width="150">123</td>
+        <td width="150">123</td>
+        <td width="150">xxx</td>
+        <td width="150">xxx</td>
+        <td>xxx</td>
+        <td width="150">xxx</td>
+        <td>xxx</td>
+        <td>xxx</td>
+        <td width="250">xxx</td>
+      </tr>
+    </tbody>
+  </table>
 </ion-content>
