update display page and new date

--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -8,14 +8,32 @@
 
   <ion-searchbar>searchbar</ion-searchbar>
 
-  <ion-item>
-    <ion-label>วันที่</ion-label>
-    <ion-input type="date"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label>เวลา</ion-label>
-    <ion-datetime display-format="HH:mm" value="2020-03-31T06:00Z" display-timezone="utc"></ion-datetime>
-  </ion-item>
+  <ion-row>
+    <ion-col>
+      <ion-item>
+        <ion-label item-> วันที่ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{date |  displayDate:'date'}}
+        </ion-label>
+        <ion-icon item-right ion-button name="calendar" (click)="picker.open()">
+          <ion-datetime #picker pickerFormat="DD MMMM YYYY" [(ngModel)]="date">
+          </ion-datetime>
+        </ion-icon>
+      </ion-item>
+    </ion-col>
+    <ion-col>
+      <ion-item>
+        <ion-label>เวลา &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{time |  displayDate:'time'}}</ion-label>
+        <ion-icon name="alarm-outline" (click)="clock.open()">
+          <ion-datetime #clock display-format="HH:mm" [(ngModel)]="time" display-timezone="utc"></ion-datetime>
+        </ion-icon>
+      </ion-item>
+    </ion-col>
+    <ion-col>
+      <ion-item>
+        <ion-input type="date"></ion-input>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+
 
   <ion-list>
     <ion-item>
@@ -48,18 +66,18 @@
     <ion-label>
       เลือกได้หลายอย่าง
     </ion-label>
-  <ion-item>
-    <ion-label>Checkbox1</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-  </ion-item>
-  <ion-item>
-    <ion-label>Checkbox2</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-  </ion-item>
-  <ion-item>
-    <ion-label>Checkbox3</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-  </ion-item>
+    <ion-item>
+      <ion-label>Checkbox1</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Checkbox2</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Checkbox3</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
   </ion-list>
 
   <ion-item>
