--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -6,76 +6,97 @@
 
 <ion-content>
 
-  <ion-searchbar>searchbar</ion-searchbar>
+  <div class="ion-padding">
+    <ion-searchbar></ion-searchbar>
+  </div>
 
   <ion-item>
-    <ion-label>วันที่</ion-label>
+    <ion-col size="2">
+      <ion-label>วันที่</ion-label>
+    </ion-col>
     <ion-input type="date"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label>เวลา</ion-label>
+    <ion-col size="2">
+      <ion-label>เวลา</ion-label>
+    </ion-col>
     <ion-datetime display-format="HH:mm" value="2020-03-31T06:00Z" display-timezone="utc"></ion-datetime>
   </ion-item>
 
-  <ion-list>
-    <ion-item>
-      <ion-label position="fixed">Input</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="fixed">Inputtttttttttttt</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-  </ion-list>
 
-  <ion-radio-group>
-    <ion-list>
+  <ion-list>
+    <ion-item lines="none">
       <ion-label>
-        เลือกอย่างใดอย่างหนึ่ง
+        กรอกข้อมูล
       </ion-label>
-      <ion-item>
-        <ion-radio slot="start"></ion-radio>
-        <ion-label>Packard</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-radio slot="start"></ion-radio>
-        <ion-label>Studebaker</ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-radio-group>
-
-  <ion-list>
-    <ion-label>
-      เลือกได้หลายอย่าง
-    </ion-label>
-  <ion-item>
-    <ion-label>Checkbox1</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-  </ion-item>
-  <ion-item>
-    <ion-label>Checkbox2</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-  </ion-item>
-  <ion-item>
-    <ion-label>Checkbox3</ion-label>
-    <ion-checkbox slot="start"></ion-checkbox>
-  </ion-item>
+    </ion-item>
+    <ion-item>
+      <ion-col size="2">
+        <ion-label>Input</ion-label>
+      </ion-col>
+      <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-col size="2">
+        <ion-label>Inputtttttttttttt</ion-label>
+      </ion-col>
+      <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-col size="2">
+        <ion-label>เลือกชั้น</ion-label>
+      </ion-col>
+      <ion-select interface="action-sheet" placeholder="กรุณาเลือก">
+        <ion-select-option>1</ion-select-option>
+        <ion-select-option>2</ion-select-option>
+        <ion-select-option>3</ion-select-option>
+        <ion-select-option>4</ion-select-option>
+      </ion-select>
+    </ion-item>
   </ion-list>
 
-  <ion-item>
-    <ion-label>เลือกชั้น เลือกห้อง</ion-label>
-    <ion-select interface="action-sheet">
-      <ion-select-option>1</ion-select-option>
-      <ion-select-option>2</ion-select-option>
-      <ion-select-option>3</ion-select-option>
-      <ion-select-option>4</ion-select-option>
-    </ion-select>
-  </ion-item>
+  <ion-list>
+    <ion-radio-group>
+      <ion-item lines="none">
+        <ion-label>
+          เลือกได้อย่างใดอย่างหนึ่ง
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-radio slot="start"></ion-radio>
+        <ion-label>Cord</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-radio slot="start"></ion-radio>
+        <ion-label>Duesenberg</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-radio slot="start"></ion-radio>
+        <ion-label>Hudson</ion-label>
+      </ion-item>
+    </ion-radio-group>
+  </ion-list>
 
-  <ion-button>บันทึก/ยืนยัน/ถัดไป</ion-button>
-  <ion-button color="danger">ยกเลิก</ion-button>
-  <ion-button color="warning">แก้ไข</ion-button>
 
+  <ion-list>
+    <ion-item lines="none">
+      <ion-label>
+        เลือกได้หลายอย่าง
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Checkbox1</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Checkbox2</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
+    <ion-item>
+      <ion-label>Checkbox3</ion-label>
+      <ion-checkbox slot="start"></ion-checkbox>
+    </ion-item>
+  </ion-list>
 
   <ion-card>
     <ion-card-header>
@@ -144,7 +165,8 @@
   </ion-card>
 
 
-  <table pedding>
+  <ion-scroll direction="x" class="wide-as-needed">
+  <table pedding >
     <thead>
       <tr>
         <th>No.</th>
@@ -159,6 +181,13 @@
         <th width="150">Company</th>
         <th>RMRate</th>
         <th>ABF</th>
+        <th width="250">Remark</th>
+        <th width="250">Remark</th>
+        <th width="250">Remark</th>
+        <th width="250">Remark</th>
+        <th width="250">Remark</th>
+        <th width="250">Remark</th>
+        <th width="250">Remark</th>
         <th width="250">Remark</th>
       </tr>
     </thead>
@@ -178,7 +207,50 @@
         <td>xxx</td>
         <td>xxx</td>
         <td width="250">xxx</td>
+        <td width="250">xxx</td>
+        <td width="250">xxx</td>
+        <td width="250">xxx</td>
+        <td width="250">xxx</td>
+        <td width="250">xxx</td>
+        <td width="250">xxx</td>
       </tr>
     </tbody>
   </table>
+  </ion-scroll>
+
+
+    <div class="ion-text-end">
+      <ion-button color="primary">บันทึก</ion-button>
+      <ion-button color="danger">ยกเลิก</ion-button>
+    </div>
+    <div class="ion-text-end">
+      <ion-button color="warning">แก้ไข</ion-button>
+    </div>
+
+
+
+  <!-- <ion-header-bar class="bar-subheader">
+    <ion-scroll direction="x" class="wide-as-needed" style:widht300px;>
+      <a class="button inline-button">this is a button : 1</a>
+      <a class="button">this is a button : 2</a>
+      <a class="button">this is a button : 3</a>
+      <a class="button">this is a button : 4</a>
+      <a class="button">this is a button : 5</a>
+      <a class="button">this is a button : 6</a>
+      <a class="button">this is a button : 7</a>
+      <a class="button">this is a button : 8</a>
+      <a class="button">this is a button : 9</a>
+      <a class="button">this is a button : 10</a>
+      <a class="button">this is a button : 11</a>
+      <a class="button">this is a button : 12</a>
+      <a class="button">this is a button : 13</a>
+      <a class="button">this is a button : 14</a>
+      <a class="button">this is a button : 15</a>
+      <a class="button">this is a button : 16</a>
+      
+      
+      
+    </ion-scroll>
+  </ion-header-bar> -->
+
 </ion-content>
