--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -4,274 +4,308 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content  class="ion-padding">
-  <ion-segment (ionChange)="segmentChanged($event)">
-    <ion-segment-button value="friends">
-      <ion-label>Friends</ion-label>
+<ion-content class="ion-padding">
+  <ion-segment [(ngModel)]="option" (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="element">
+      <ion-label>element</ion-label>
     </ion-segment-button>
-    <ion-segment-button value="enemies">
-      <ion-label>Enemies</ion-label>
+    <ion-segment-button value="form">
+      <ion-label>form&modal</ion-label>
+
     </ion-segment-button>
   </ion-segment>
 
-  <div>
-    <ion-searchbar></ion-searchbar>
-  </div>
+  <ng-container [ngSwitch]="option">
+    <ng-container *ngSwitchCase="'form'">
 
-  <ion-row>
-    <ion-col>
-      <ion-item class="row">
-        <ion-col size="2">
-          <ion-label item-lelf> วันที่ </ion-label>
-        </ion-col>
-        <ion-col class="ion-text-center" size="9">
-          {{date |  displayDate:'date'}}
+      <h2> import "ReactiveFormsModule" in (namePage).module.ts </h2>
+      <h2> Form </h2>
+      <form [formGroup]="todo" (ngSubmit)="logForm()">
+        <ion-item>
+          <ion-label position="fixed">Todo</ion-label>
+          <ion-input type="text" formControlName="title" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="fixed">Description</ion-label>
+          <ion-textarea formControlName="description" placeholder="กรุณากรอกข้อมูล"></ion-textarea>
+        </ion-item>
+        <div class=" ion-text-end">
+          <ion-button block type="submit" [disabled]="!todo.valid">Submit
+          </ion-button>
+        </div>
+
+      </form>
+
+    </ng-container>
+
+    <ng-container *ngSwitchCase="'element'">
+
+
+      <div>
+        <ion-searchbar></ion-searchbar>
+      </div>
+
+      <ion-row>
+        <ion-col>
+          <ion-item class="row">
+            <ion-col size="2">
+              <ion-label item-left> วันที่ </ion-label>
+            </ion-col>
+            <ion-col class="ion-text-center" size="9">
+              {{date |  displayDate:'date'}}
+            </ion-col>
+            <ion-col>
+              <ion-icon ion-button name="calendar" (click)="picker.open()">
+                <ion-datetime #picker pickerFormat="DD MM YY" [(ngModel)]="date">
+                </ion-datetime>
+              </ion-icon>
+            </ion-col>
+          </ion-item>
         </ion-col>
         <ion-col>
-          <ion-icon ion-button name="calendar" (click)="picker.open()">
-            <ion-datetime #picker pickerFormat="DD MM YY" [(ngModel)]="date">
-            </ion-datetime>
-          </ion-icon>
-        </ion-col>
-      </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item class="row">
-        <ion-col size="2">
-          <ion-label item-lelf> เวลา </ion-label>
-        </ion-col>
-        <ion-col class="ion-text-center" size="9">
-          {{ time |  displayDate:'time'}}
+          <ion-item class="row">
+            <ion-col size="2">
+              <ion-label item-left> เวลา </ion-label>
+            </ion-col>
+            <ion-col class="ion-text-center" size="9">
+              {{ time |  displayDate:'time'}}
+            </ion-col>
+            <ion-col>
+              <ion-icon ion-button name="alarm-outline" (click)="clock.open()">
+                <ion-datetime #clock display-format="HH:mm" [(ngModel)]="time" display-timezone="utc"></ion-datetime>
+              </ion-icon>
+            </ion-col>
+          </ion-item>
         </ion-col>
         <ion-col>
-          <ion-icon ion-button name="alarm-outline" (click)="clock.open()">
-            <ion-datetime #clock display-format="HH:mm" [(ngModel)]="time" display-timezone="utc"></ion-datetime>
-          </ion-icon>
+          <ion-item>
+            <ion-input type="date"></ion-input>
+          </ion-item>
         </ion-col>
-      </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item>
-        <ion-input type="date"></ion-input>
-      </ion-item>
-    </ion-col>
-  </ion-row>
+      </ion-row>
 
-  <ion-list>
-    <ion-item lines="none">
-      <ion-label>
-        กรอกข้อมูล
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-col size="2">
-        <ion-label>Input</ion-label>
-      </ion-col>
-      <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-col size="2">
-        <ion-label>Inputtttttttttttt</ion-label>
-      </ion-col>
-      <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-col size="2">
-        <ion-label>เลือกชั้น</ion-label>
-      </ion-col>
-      <ion-select interface="action-sheet" placeholder="กรุณาเลือก">
-        <ion-select-option>1</ion-select-option>
-        <ion-select-option>2</ion-select-option>
-        <ion-select-option>3</ion-select-option>
-        <ion-select-option>4</ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
+      <ion-list>
+        <ion-item lines="none">
+          <ion-label>
+            กรอกข้อมูล
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-col size="2">
+            <ion-label>Input</ion-label>
+          </ion-col>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-col size="2">
+            <ion-label>Inputtttttttttttt</ion-label>
+          </ion-col>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-col size="2">
+            <ion-label>เลือกชั้น</ion-label>
+          </ion-col>
+          <ion-select interface="action-sheet" placeholder="กรุณาเลือก">
+            <ion-select-option>1</ion-select-option>
+            <ion-select-option>2</ion-select-option>
+            <ion-select-option>3</ion-select-option>
+            <ion-select-option>4</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
 
-  <ion-list>
-    <ion-radio-group>
-      <ion-item lines="none">
+      <ion-list>
+        <ion-radio-group>
+          <ion-item lines="none">
+            <ion-label>
+              เลือกได้อย่างใดอย่างหนึ่ง
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-radio slot="start"></ion-radio>
+            <ion-label>Cord</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-radio slot="start"></ion-radio>
+            <ion-label>Duesenberg</ion-label>
+          </ion-item>
+        </ion-radio-group>
+      </ion-list>
+
+      <ion-list>
         <ion-label>
-          เลือกได้อย่างใดอย่างหนึ่ง
+          เลือกได้หลายอย่าง
         </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-radio slot="start"></ion-radio>
-        <ion-label>Cord</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-radio slot="start"></ion-radio>
-        <ion-label>Duesenberg</ion-label>
-      </ion-item>
-    </ion-radio-group>
-  </ion-list>
-
-  <ion-list>
-    <ion-label>
-      เลือกได้หลายอย่าง
-    </ion-label>
-    <ion-item>
-      <ion-label>Checkbox1</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox2</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox3</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
-  </ion-list>
+        <ion-item>
+          <ion-label>Checkbox1</ion-label>
+          <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-item>
+          <ion-label>Checkbox2</ion-label>
+          <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-item>
+          <ion-label>Checkbox3</ion-label>
+          <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+      </ion-list>
 
 
-  <ion-list>
-    <ion-item lines="none">
-      <ion-label>
-        เลือกได้หลายอย่าง
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox1</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox2</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox3</ion-label>
-      <ion-checkbox slot="start"></ion-checkbox>
-    </ion-item>
-  </ion-list>
+      <ion-list>
+        <ion-item lines="none">
+          <ion-label>
+            เลือกได้หลายอย่าง
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Checkbox1</ion-label>
+          <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-item>
+          <ion-label>Checkbox2</ion-label>
+          <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+        <ion-item>
+          <ion-label>Checkbox3</ion-label>
+          <ion-checkbox slot="start"></ion-checkbox>
+        </ion-item>
+      </ion-list>
 
-  <ion-card>
-    <ion-card-header>
-      <ion-row text-center>
-        <ion-col col-2>
-          ไอดี
-        </ion-col>
-        <ion-col col-3>
-          ชื่อ - สกุล
-        </ion-col>
-        <ion-col col-3>
-          Full Name
-        </ion-col>
-        <ion-col col-3>
-          เบอร์โทรศัพท์
-        </ion-col>
-      </ion-row>
-    </ion-card-header>
-  </ion-card>
+      <ion-card>
+        <ion-card-header>
+          <ion-row text-center>
+            <ion-col col-2>
+              ไอดี
+            </ion-col>
+            <ion-col col-3>
+              ชื่อ - สกุล
+            </ion-col>
+            <ion-col col-3>
+              Full Name
+            </ion-col>
+            <ion-col col-3>
+              เบอร์โทรศัพท์
+            </ion-col>
+          </ion-row>
+        </ion-card-header>
+      </ion-card>
 
-  <ion-card>
-    <ion-card-content>
-      <ion-row>
-        <ion-col col-2>
-          ไอดี
-        </ion-col>
-        <ion-col col-3>
-          ชื่อ - สกุล
-        </ion-col>
-        <ion-col col-3>
-          Full Name
-        </ion-col>
-        <ion-col col-3>
-          เบอร์โทรศัพท์
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col col-2>
-          ไอดี
-        </ion-col>
-        <ion-col col-3>
-          ชื่อ - สกุล
-        </ion-col>
-        <ion-col col-3>
-          Full Name
-        </ion-col>
-        <ion-col col-3>
-          เบอร์โทรศัพท์
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col col-2>
-          ไอดี
-        </ion-col>
-        <ion-col col-3>
-          ชื่อ - สกุล
-        </ion-col>
-        <ion-col col-3>
-          Full Name
-        </ion-col>
-        <ion-col col-3>
-          เบอร์โทรศัพท์
-        </ion-col>
-      </ion-row>
-    </ion-card-content>
-  </ion-card>
-
-
-  <!-- <ion-scroll direction="x" class="wide-as-needed"> -->
-  <table pedding >
-    <thead>
-      <tr>
-        <th>No.</th>
-        <th width="150">RM N.</th>
-        <th width="250">GuestName</th>
-        <th>Pax</th>
-        <th width="150">Arrival</th>
-        <th width="150">TimeIn</th>
-        <th width="150">Departure</th>
-        <th width="150">TimeOut</th>
-        <th>Nationality</th>
-        <th width="150">Company</th>
-        <th>RMRate</th>
-        <th>ABF</th>
-        <th width="250">Remark</th>
-        <th width="250">Remark</th>
-        <th width="250">Remark</th>
-        <th width="250">Remark</th>
-        <th width="250">Remark</th>
-        <th width="250">Remark</th>
-        <th width="250">Remark</th>
-        <th width="250">Remark</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>x</td>
-        <td width="150">xxx</td>
-        <td width="250">xxx</td>
-        <td>xxx</td>
-        <td width="150">123</td>
-        <td width="150">123</td>
-        <td width="150">xxx</td>
-        <td width="150">xxx</td>
-        <td>xxx</td>
-        <td width="150">xxx</td>
-        <td>xxx</td>
-        <td>xxx</td>
-        <td width="250">xxx</td>
-        <td width="250">xxx</td>
-        <td width="250">xxx</td>
-        <td width="250">xxx</td>
-        <td width="250">xxx</td>
-        <td width="250">xxx</td>
-        <td width="250">xxx</td>
-      </tr>
-    </tbody>
-  </table>
-  <!-- </ion-scroll> -->
+      <ion-card>
+        <ion-card-content>
+          <ion-row>
+            <ion-col col-2>
+              ไอดี
+            </ion-col>
+            <ion-col col-3>
+              ชื่อ - สกุล
+            </ion-col>
+            <ion-col col-3>
+              Full Name
+            </ion-col>
+            <ion-col col-3>
+              เบอร์โทรศัพท์
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-2>
+              ไอดี
+            </ion-col>
+            <ion-col col-3>
+              ชื่อ - สกุล
+            </ion-col>
+            <ion-col col-3>
+              Full Name
+            </ion-col>
+            <ion-col col-3>
+              เบอร์โทรศัพท์
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col col-2>
+              ไอดี
+            </ion-col>
+            <ion-col col-3>
+              ชื่อ - สกุล
+            </ion-col>
+            <ion-col col-3>
+              Full Name
+            </ion-col>
+            <ion-col col-3>
+              เบอร์โทรศัพท์
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
 
 
-    <div class="ion-text-end">
-      <ion-button color="primary">บันทึก</ion-button>
-      <ion-button color="danger">ยกเลิก</ion-button>
-    </div>
-    <div class="ion-text-end" >
-      <ion-button color="warning">แก้ไข</ion-button>
-    </div>
+      <!-- <ion-scroll direction="x" class="wide-as-needed"> -->
+      <table pedding>
+        <thead>
+          <tr>
+            <th>No.</th>
+            <th width="150">RM N.</th>
+            <th width="250">GuestName</th>
+            <th>Pax</th>
+            <th width="150">Arrival</th>
+            <th width="150">TimeIn</th>
+            <th width="150">Departure</th>
+            <th width="150">TimeOut</th>
+            <th>Nationality</th>
+            <th width="150">Company</th>
+            <th>RMRate</th>
+            <th>ABF</th>
+            <th width="250">Remark</th>
+            <th width="250">Remark</th>
+            <th width="250">Remark</th>
+            <th width="250">Remark</th>
+            <th width="250">Remark</th>
+            <th width="250">Remark</th>
+            <th width="250">Remark</th>
+            <th width="250">Remark</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>x</td>
+            <td width="150">xxx</td>
+            <td width="250">xxx</td>
+            <td>xxx</td>
+            <td width="150">123</td>
+            <td width="150">123</td>
+            <td width="150">xxx</td>
+            <td width="150">xxx</td>
+            <td>xxx</td>
+            <td width="150">xxx</td>
+            <td>xxx</td>
+            <td>xxx</td>
+            <td width="250">xxx</td>
+            <td width="250">xxx</td>
+            <td width="250">xxx</td>
+            <td width="250">xxx</td>
+            <td width="250">xxx</td>
+            <td width="250">xxx</td>
+            <td width="250">xxx</td>
+          </tr>
+        </tbody>
+      </table>
+      <!-- </ion-scroll> -->
+
+
+      <div class="ion-text-end">
+        <ion-button color="primary">บันทึก</ion-button>
+        <ion-button color="danger">ยกเลิก</ion-button>
+      </div>
+      <div class="ion-text-end">
+        <ion-button color="warning">แก้ไข</ion-button>
+      </div>
+
+    </ng-container>
+  </ng-container>
+
+
+
+
 
 </ion-content>
