--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -14,8 +14,8 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ng-container [ngSwitch]="option">
-    <ng-container *ngSwitchCase="'form'">
+  <!-- <ng-container [ngSwitch]="option">
+    <ng-container *ngSwitchCase="'form'"> -->
 
       <h2> import "ReactiveFormsModule" in (namePage).module.ts </h2>
       <h2> Form </h2>
@@ -35,9 +35,8 @@
 
       </form>
 
-    </ng-container>
-
-    <ng-container *ngSwitchCase="'element'">
+    <!-- </ng-container>
+    <ng-container *ngSwitchCase="'element'"> -->
 
 
       <div>
