--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -96,7 +96,7 @@
           <ion-col size="2">
             <ion-label>Inputtttttttttttt</ion-label>
           </ion-col>
-          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+            <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
         </ion-item>
         <ion-item lines="none">
           <ion-col size="2">
@@ -115,7 +115,7 @@
         <ion-radio-group>
           <ion-item>
             <ion-label>
-              เลือกได้หลายอย่าง
+              เลือกอย่างใดอย่างหนึ่ง
             </ion-label>
           </ion-item>
           <ion-item>
