--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -14,254 +14,326 @@
     </ion-segment-button>
   </ion-segment>
 
-  <!-- <ng-container [ngSwitch]="option">
-    <ng-container *ngSwitchCase="'form'"> -->
 
-  <h2> import "ReactiveFormsModule" in (namePage).module.ts </h2>
-  <h2> Form </h2>
-  <form [formGroup]="todo" (ngSubmit)="logForm()">
-    <ion-item>
-      <ion-label position="fixed">Todo</ion-label>
-      <ion-input type="text" formControlName="title" placeholder="กรุณากรอกข้อมูล"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label position="fixed">Description</ion-label>
-      <ion-textarea formControlName="description" placeholder="กรุณากรอกข้อมูล"></ion-textarea>
-    </ion-item>
-    <div class=" ion-text-end">
-      <ion-button block type="submit" [disabled]="!todo.valid">Submit
-      </ion-button>
-    </div>
+  <ng-container [ngSwitch]="option">
+    <ng-container *ngSwitchCase="'form'">
 
-  </form>
+      <h1> Form </h1>
+      <h4> import "ReactiveFormsModule" in (namePage).module.ts </h4>
+      <form [formGroup]="todo" (ngSubmit)="logForm()">
+        <ion-item>
+          <ion-label position="fixed">Todo</ion-label>
+          <ion-input type="text" formControlName="title" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="fixed">Description</ion-label>
+          <ion-textarea formControlName="description" placeholder="กรุณากรอกข้อมูล"></ion-textarea>
+        </ion-item>
+        <div class=" ion-text-end">
+          <ion-button type="submit" [disabled]="!todo.valid">Submit
+          </ion-button>
+        </div>
 
-  <!-- </ng-container>
-    <ng-container *ngSwitchCase="'element'"> -->
+      </form>
+      <h1>demo modal</h1>
+      <h4> import "(namePage).module" in app.module </h4>
+      <ion-button expand="block" (click)="presentModal()">demo modal</ion-button>
+
+      <h1>example calenda</h1>
+      <h2>calenda</h2>
+      <mbsc-form>
+        <div class="mbsc-grid mbsc-no-padding">
+          <div class="mbsc-row mbsc-justify-content-center">
+            <div class="mbsc-col-xl-5 mbsc-col-md-6">
+              <mbsc-form-group inset>
+                <mbsc-form-group-title>Pop-up positioning</mbsc-form-group-title>
+                <mbsc-calendar [(ngModel)]="top" [touchUi]="false" display="top" placeholder="Please select...">Top
+                </mbsc-calendar>
+                <mbsc-calendar [(ngModel)]="bottom" [touchUi]="false" display="bottom" placeholder="Please select...">
+                  Bottom</mbsc-calendar>
+                <mbsc-calendar [(ngModel)]="anchored" [touchUi]="false" placeholder="Please select...">Anchored
+                </mbsc-calendar>
+                <mbsc-calendar [(ngModel)]="center" [touchUi]="false" display="center" placeholder="Please select...">
+                  Center</mbsc-calendar>
+              </mbsc-form-group>
+              <mbsc-form-group inset>
+                <mbsc-form-group-title>Basic usage</mbsc-form-group-title>
+                <mbsc-calendar [(ngModel)]="datetime" [options]="datetimeSettings" placeholder="Please select...">Date &
+                  Time</mbsc-calendar>
+                <mbsc-calendar [(ngModel)]="date" [options]="dateSettings" placeholder="Please select...">Date
+                </mbsc-calendar>
+              </mbsc-form-group>
+              <mbsc-form-group inset>
+                <mbsc-form-group-title>With buttons</mbsc-form-group-title>
+                <mbsc-calendar [(ngModel)]="setBtn" [options]="setBtnSettings" placeholder="Please select...">Set button
+                </mbsc-calendar>
+                <mbsc-calendar [(ngModel)]="setCancel" [options]="setCancelSettings" placeholder="Please select...">
+                  Set/Cancel</mbsc-calendar>
+              </mbsc-form-group>
+            </div>
+            <div class="mbsc-col-xl-4 mbsc-col-lg-5 mbsc-col-md-6">
+              <mbsc-form-group inset>
+                <mbsc-form-group-title>Embedded Date & Time</mbsc-form-group-title>
+                <mbsc-calendar [(ngModel)]="inline" [options]="inlineSettings"></mbsc-calendar>
+              </mbsc-form-group>
+            </div>
+          </div>
+        </div>
+      </mbsc-form>
+    </ng-container>
+    <ng-container *ngSwitchCase="'element'">
 
 
-  <div>
-    <ion-searchbar></ion-searchbar>
-  </div>
+      <div>
+        <ion-searchbar></ion-searchbar>
+      </div>
 
-  <ion-row>
-    <ion-col>
-      <ion-item class="row">
-        <ion-col size="2">
-          <ion-label item-left> วันที่ </ion-label>
-        </ion-col>
-        <ion-col class="ion-text-center" size="9">
-          {{date |  displayDate:'date'}}
+      <!-- <ion-row>
+        <ion-col>
+          <ion-item class="row">
+            <ion-col size="2">
+              <ion-label item-left> วันที่ </ion-label>
+            </ion-col>
+            <ion-col class="ion-text-center" size="9">
+              {{date |  displayDate:'date'}}
+            </ion-col>
+            <ion-col>
+              <ion-icon ion-button name="calendar" (click)="picker.open()">
+                <ion-datetime #picker pickerFormat="DD MM YY" [(ngModel)]="date">
+                </ion-datetime>
+              </ion-icon>
+            </ion-col>
+          </ion-item>
         </ion-col>
         <ion-col>
-          <ion-icon ion-button name="calendar" (click)="picker.open()">
-            <ion-datetime #picker pickerFormat="DD MM YY" [(ngModel)]="date">
+          <ion-item class="row">
+            <ion-col size="2">
+              <ion-label item-left> เวลา </ion-label>
+            </ion-col>
+            <ion-col class="ion-text-center" size="9">
+              {{ time |  displayDate:'time'}}
+            </ion-col>
+            <ion-col>
+              <ion-icon ion-button name="alarm-outline" (click)="clock.open()">
+                <ion-datetime #clock display-format="HH:mm" [(ngModel)]="time" display-timezone="utc"></ion-datetime>
+              </ion-icon>
+            </ion-col>
+          </ion-item>
+        </ion-col>
+        <ion-col>
+          <ion-item>
+            <ion-input type="date"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row> -->
+
+
+      <ion-list lines="none">
+        <ion-item ion-input>
+          <ion-col size="1">
+            <ion-label> วันที่ </ion-label>
+          </ion-col>
+          <!-- <mbsc-calendar [(ngModel)]="center" [touchUi]="false" display="center" placeholder="Please select...">Center
+          </mbsc-calendar> -->
+          <ion-input item class="ion-text-center" type="date">
+          </ion-input>
+        </ion-item>
+        <ion-item (click)="clock.open()">
+          <ion-col size="1">
+            <ion-label> เวลา </ion-label>
+          </ion-col>
+          <ion-col>
+            <ion-datetime class="ion-text-center" #clock display-format="HH:mm" value="" [(ngModel)]="time"
+              display-timezone="utc">
             </ion-datetime>
-          </ion-icon>
-        </ion-col>
-      </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item class="row">
-        <ion-col size="2">
-          <ion-label item-left> เวลา </ion-label>
-        </ion-col>
-        <ion-col class="ion-text-center" size="9">
-          {{ time |  displayDate:'time'}}
-        </ion-col>
-        <ion-col>
-          <ion-icon ion-button name="alarm-outline" (click)="clock.open()">
-            <ion-datetime #clock display-format="HH:mm" [(ngModel)]="time" display-timezone="utc"></ion-datetime>
-          </ion-icon>
-        </ion-col>
-      </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item>
-        <ion-input type="date"></ion-input>
-      </ion-item>
-    </ion-col>
-  </ion-row>
+          </ion-col>
+          <ion-icon slot="end" name="alarm-outline"> </ion-icon>
+        </ion-item>
 
-  <ion-list lines="none">
-    <ion-item>
-      <ion-label>
-        กรอกข้อมูล
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-col size="2">
-        <ion-label>Input</ion-label>
-      </ion-col>
-      <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-col size="2">
-        <ion-label>Inputtttttttttttt</ion-label>
-      </ion-col>
-      <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-col size="2">
-        <ion-label>เลือกชั้น</ion-label>
-      </ion-col>
-      <ion-select interface="action-sheet" placeholder="กรุณาเลือก">
-        <ion-select-option value="1">1</ion-select-option>
-        <ion-select-option value="2">2</ion-select-option>
-        <ion-select-option value="3">3</ion-select-option>
-        <ion-select-option value="4">4</ion-select-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
+        <ion-item>
+          <ion-col size="2">
+            <ion-label>
+              กรอกข้อมูล
+            </ion-label>
+          </ion-col>
+        </ion-item>
+        <ion-item>
+          <ion-col size="2">
+            <ion-label>Input</ion-label>
+          </ion-col>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-col size="2">
+            <ion-label>Inputtttttttttttt</ion-label>
+          </ion-col>
+          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-col size="2">
+            <ion-label>เลือกชั้น</ion-label>
+          </ion-col>
+          <ion-select interface="action-sheet" placeholder="กรุณาเลือก">
+            <ion-select-option value="1">1</ion-select-option>
+            <ion-select-option value="2">2</ion-select-option>
+            <ion-select-option value="3">3</ion-select-option>
+            <ion-select-option value="4">4</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
 
-  <ion-list lines="none">
-    <ion-radio-group>
-      <ion-item>
-        <ion-label>
-          เลือกได้หลายอย่าง
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-radio slot="start" value="1"></ion-radio>
-        <ion-label>Cord</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-radio slot="start" value="2"></ion-radio>
-        <ion-label>Duesenberg</ion-label>
-      </ion-item>
-    </ion-radio-group>
-  </ion-list>
+      <ion-list lines="none">
+        <ion-radio-group>
+          <ion-item>
+            <ion-label>
+              เลือกได้หลายอย่าง
+            </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-radio slot="start" value="1"></ion-radio>
+            <ion-label>Cord</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-radio slot="start" value="2"></ion-radio>
+            <ion-label>Duesenberg</ion-label>
+          </ion-item>
+        </ion-radio-group>
+      </ion-list>
 
-  <ion-list lines="none">
-    <ion-item>
-      <ion-label>
-        เลือกได้หลายอย่าง
-      </ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox1</ion-label>
-      <ion-checkbox slot="start" value=""></ion-checkbox>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox2</ion-label>
-      <ion-checkbox slot="start" value=""></ion-checkbox>
-    </ion-item>
-    <ion-item>
-      <ion-label>Checkbox3</ion-label>
-      <ion-checkbox slot="start" value=""></ion-checkbox>
-    </ion-item>
-  </ion-list>
+      <ion-list lines="none">
+        <ion-item>
+          <ion-label>
+            เลือกได้หลายอย่าง
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Checkbox1</ion-label>
+          <ion-checkbox slot="start" value=""></ion-checkbox>
+        </ion-item>
+        <ion-item>
+          <ion-label>Checkbox2</ion-label>
+          <ion-checkbox slot="start" value=""></ion-checkbox>
+        </ion-item>
+        <ion-item>
+          <ion-label>Checkbox3</ion-label>
+          <ion-checkbox slot="start" value=""></ion-checkbox>
+        </ion-item>
+      </ion-list>
 
-  <ion-card>
-    <ion-card-header>
-      <ion-row class="ion-text-center">
-        <ion-col size="2">
-          <h4>ไอดี</h4>
-        </ion-col>
-        <ion-col size="3">
-          <h4>ชื่อ - สกุล</h4>
-        </ion-col>
-        <ion-col size="3">
-          <h4>Full Name</h4>
-        </ion-col>
-        <ion-col size="3">
-          <h4>เบอร์โทรศัพท์</h4>
-        </ion-col>
-      </ion-row>
-    </ion-card-header>
-  </ion-card>
+      <ion-card>
+        <ion-card-header>
+          <ion-row class="ion-text-center">
+            <ion-col size="2">
+              <h4>ไอดี</h4>
+            </ion-col>
+            <ion-col size="3">
+              <h4>ชื่อ - สกุล</h4>
+            </ion-col>
+            <ion-col size="3">
+              <h4>Full Name</h4>
+            </ion-col>
+            <ion-col size="3">
+              <h4>เบอร์โทรศัพท์</h4>
+            </ion-col>
+          </ion-row>
+        </ion-card-header>
+      </ion-card>
 
-  <ion-card>
-    <ion-card-content class="ion-text-center">
-      <ion-row>
-        <ion-col size="2">
-          ไอดี
-        </ion-col>
-        <ion-col size="3">
-          ชื่อ - สกุล
-        </ion-col>
-        <ion-col size="3">
-          Full Name
-        </ion-col>
-        <ion-col size="3">
-          เบอร์โทรศัพท์
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="2">
-          ไอดี
-        </ion-col>
-        <ion-col size="3">
-          ชื่อ - สกุล
-        </ion-col>
-        <ion-col size="3">
-          Full Name
-        </ion-col>
-        <ion-col size="3">
-          เบอร์โทรศัพท์
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size="2">
-          ไอดี
-        </ion-col>
-        <ion-col size="3">
-          ชื่อ - สกุล
-        </ion-col>
-        <ion-col size="3">
-          Full Name
-        </ion-col>
-        <ion-col size="3">
-          เบอร์โทรศัพท์
-        </ion-col>
-      </ion-row>
-    </ion-card-content>
-  </ion-card>
+      <ion-card>
+        <ion-card-content class="ion-text-center">
+          <ion-row>
+            <ion-col size="2">
+              ไอดี
+            </ion-col>
+            <ion-col size="3">
+              ชื่อ - สกุล
+            </ion-col>
+            <ion-col size="3">
+              Full Name
+            </ion-col>
+            <ion-col size="3">
+              เบอร์โทรศัพท์
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="2">
+              ไอดี
+            </ion-col>
+            <ion-col size="3">
+              ชื่อ - สกุล
+            </ion-col>
+            <ion-col size="3">
+              Full Name
+            </ion-col>
+            <ion-col size="3">
+              เบอร์โทรศัพท์
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="2">
+              ไอดี
+            </ion-col>
+            <ion-col size="3">
+              ชื่อ - สกุล
+            </ion-col>
+            <ion-col size="3">
+              Full Name
+            </ion-col>
+            <ion-col size="3">
+              เบอร์โทรศัพท์
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
 
-  <div scrollX="true" scrollY="true" class="ion-padding">
-    <table>
-      <thead class="bgb">
-        <tr>
-          <th>No.</th>
-          <th width="150">RM N.</th>
-          <th width="500">GuestName</th>
-          <th>Pax</th>
-          <th width="100">Arrival</th>
-          <th width="100">TimeIn</th>
-          <th width="100">Departure</th>
-          <th width="100">TimeOut</th>
-          <th>Nationality</th>
-          <th width="100">Company</th>
-          <th>RMRate</th>
-          <th>ABF</th>
-          <th width="250">Remark</th>
-        </tr>
-      </thead>
+      <div scrollX="true" scrollY="true" class="ion-padding">
+        <table>
+          <thead class="bgb">
+            <tr>
+              <th>No.</th>
+              <th width="150">RM N.</th>
+              <th width="500">GuestName</th>
+              <th>Pax</th>
+              <th width="100">Arrival</th>
+              <th width="100">TimeIn</th>
+              <th width="100">Departure</th>
+              <th width="100">TimeOut</th>
+              <th>Nationality</th>
+              <th width="100">Company</th>
+              <th>RMRate</th>
+              <th>ABF</th>
+              <th width="250">Remark</th>
+            </tr>
+          </thead>
 
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td width="150">201</td>
-          <td width="500">ศศินารา ประดิษฐ์วัฒนกร</td>
-          <td>2</td>
-          <td width="100">16/17/2018</td>
-          <td width="100">18:10</td>
-          <td width="100">12/17/18</td>
-          <td width="100">12:10</td>
-          <td>ไทย</td>
-          <td width="100">w-in</td>
-          <td>600</td>
-          <td>2</td>
-          <td width="250">DJ.I-Bar</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td width="150">201</td>
+              <td width="500">ศศินารา ประดิษฐ์วัฒนกร</td>
+              <td>2</td>
+              <td width="100">16/17/2018</td>
+              <td width="100">18:10</td>
+              <td width="100">12/17/18</td>
+              <td width="100">12:10</td>
+              <td>ไทย</td>
+              <td width="100">w-in</td>
+              <td>600</td>
+              <td>2</td>
+              <td width="250">DJ.I-Bar</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-  <div class="ion-text-end">
-    <ion-button color="primary" block type="">บันทึก</ion-button>
-    <ion-button color="danger" block type="">ยกเลิก</ion-button>
-    <ion-button color="warning" block type="">แก้ไข</ion-button>
-  </div>
+      <div class="ion-text-end">
+        <ion-button color="primary" block type="">บันทึก</ion-button>
+        <ion-button color="danger" block type="">ยกเลิก</ion-button>
+        <ion-button color="warning" block type="">แก้ไข</ion-button>
+      </div>
+
+    </ng-container>
+  </ng-container>
 
 </ion-content>
 
