--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -20,24 +20,118 @@
 
       <h1> Form </h1>
       <h4> import "ReactiveFormsModule" in (namePage).module.ts </h4>
-      <form [formGroup]="todo" (ngSubmit)="logForm()">
-        <ion-item>
-          <ion-label position="fixed">Todo</ion-label>
-          <ion-input type="text" formControlName="title" placeholder="กรุณากรอกข้อมูล"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="fixed">Description</ion-label>
-          <ion-textarea formControlName="description" placeholder="กรุณากรอกข้อมูล"></ion-textarea>
-        </ion-item>
-        <div class=" ion-text-end">
-          <ion-button type="submit" [disabled]="!todo.valid">Submit
-          </ion-button>
-        </div>
+
+      <form [formGroup]="fg" (ngSubmit)="handleSubmit()">
+        <ion-list lines="none">
+          <ion-item>
+            <ion-col size="2">
+              <ion-label>Input1</ion-label>
+            </ion-col>
+            <ion-input type="text" formControlName="input1" placeholder="กรุณากรอกข้อมูล"
+              [class.invalid]="isValid('input1')"></ion-input>
+          </ion-item>
+          <ion-item *ngIf="isValid('input1')">
+            <ion-col size="2"></ion-col>
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+
+          <ion-item>
+            <ion-col size="2">
+              <ion-label>Input2</ion-label>
+            </ion-col>
+            <ion-input type="text" formControlName="input2" placeholder="กรุณากรอกข้อมูล"
+              [class.invalid]="isValid('input2')"></ion-input>
+          </ion-item>
+          <ion-item *ngIf="isValid('input2')">
+            <ion-col size="2"></ion-col>
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+
+          <ion-item ion-input>
+            <ion-col size="2">
+              <ion-label> วันที่ </ion-label>
+            </ion-col>
+            <!-- <mbsc-calendar [(ngModel)]="center" [touchUi]="false" display="center" placeholder="Please select...">Center
+            </mbsc-calendar> -->
+            <ion-input type="date" formControlName="date" [class.invalid]="isValid('date')">
+            </ion-input>
+          </ion-item>
+          <ion-item *ngIf="isValid('date')">
+            <ion-col size="2"></ion-col>
+            <span class="invalid-msg">
+              กรุณาเลือก
+            </span>
+          </ion-item>
+          <ion-item (click)="clock.open()">
+            <ion-col size="2">
+              <ion-label> เวลา </ion-label>
+            </ion-col>
+            <div>
+              <ion-datetime #clock display-format="HH:mm" value="" formControlName="time"
+                [class.invalid]="isValid('time')" display-timezone="utc" placeholder="กรุณาเลือก">
+              </ion-datetime>
+            </div>
+            <ion-icon slot="end" name="alarm-outline"> </ion-icon>
+          </ion-item>
+          <ion-item *ngIf="isValid('time')">
+            <ion-col size="2"></ion-col>
+            <span class="invalid-msg">
+              กรุณาเลือก
+            </span>
+          </ion-item>
+
+          <ion-item>
+            <ion-col size="2">
+              <ion-label>inputUnrequire</ion-label>
+            </ion-col>
+            <ion-input type="text" formControlName="input3" placeholder="กรุณากรอกข้อมูล"
+              [class.invalid]="isValid('input3')"></ion-input>
+          </ion-item>
+          <ion-item *ngIf="isValid('input3')">
+            <ion-col size="2"></ion-col>
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+          <ion-item>
+            <ion-col size="2">
+              <ion-label>เลือกชั้น</ion-label>
+            </ion-col>
+            <ion-select interface="action-sheet" formControlName="select" placeholder="กรุณาเลือก"
+              [class.invalid]="isValid('select')">
+              <ion-select-option value="1">1</ion-select-option>
+              <ion-select-option value="2">2</ion-select-option>
+              <ion-select-option value="3">3</ion-select-option>
+              <ion-select-option value="4">4</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-item *ngIf="isValid('select')">
+            <ion-col size="2"></ion-col>
+            <span class="invalid-msg">
+              กรุณาเลือก
+            </span>
+          </ion-item>
+          <ion-item>
+            <ion-col size="2">
+              <ion-label>หมายเหตุ</ion-label>
+            </ion-col>
+            <ion-textarea placeholder="รายละเอียดเพิ่มเติม" formControlName="detail" clearOnEdit="true"></ion-textarea>
+          </ion-item>
+          <ion-item>
+            <ion-button size="default" slot="end" expand="block" color="danger">ยกเลิก</ion-button>
+            <ion-button size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
+          </ion-item>
+        </ion-list>
 
       </form>
+
       <h1>demo modal</h1>
       <h4> import "(namePage).module" in app.module </h4>
-      <ion-button expand="block" (click)="presentModal()">demo modal</ion-button>
+      <ion-button (click)="presentModal()">demo modal</ion-button>
 
       <h1>example calenda</h1>
       <h2>calenda</h2>
@@ -88,52 +182,13 @@
         <ion-searchbar></ion-searchbar>
       </div>
 
-      <!-- <ion-row>
-        <ion-col>
-          <ion-item class="row">
-            <ion-col size="2">
-              <ion-label item-left> วันที่ </ion-label>
-            </ion-col>
-            <ion-col class="ion-text-center" size="9">
-              {{date |  displayDate:'date'}}
-            </ion-col>
-            <ion-col>
-              <ion-icon ion-button name="calendar" (click)="picker.open()">
-                <ion-datetime #picker pickerFormat="DD MM YY" [(ngModel)]="date">
-                </ion-datetime>
-              </ion-icon>
-            </ion-col>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item class="row">
-            <ion-col size="2">
-              <ion-label item-left> เวลา </ion-label>
-            </ion-col>
-            <ion-col class="ion-text-center" size="9">
-              {{ time |  displayDate:'time'}}
-            </ion-col>
-            <ion-col>
-              <ion-icon ion-button name="alarm-outline" (click)="clock.open()">
-                <ion-datetime #clock display-format="HH:mm" [(ngModel)]="time" display-timezone="utc"></ion-datetime>
-              </ion-icon>
-            </ion-col>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item>
-            <ion-input type="date"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row> -->
-
-      <ion-list lines="none">
+      <!-- <ion-list lines="none">
         <ion-item ion-input lines="none">
           <ion-col size="2">
             <ion-label> วันที่ </ion-label>
           </ion-col>
-          <!-- <mbsc-calendar [(ngModel)]="center" [touchUi]="false" display="center" placeholder="Please select...">Center
-          </mbsc-calendar> -->
+          <mbsc-calendar [(ngModel)]="center" [touchUi]="false" display="center" placeholder="Please select...">Center
+          </mbsc-calendar>
           <ion-input type="date">
           </ion-input>
         </ion-item>
@@ -141,11 +196,9 @@
           <ion-col size="2">
             <ion-label> เวลา </ion-label>
           </ion-col>
-          <!-- <ion-col> -->
-            <ion-datetime class="ion-text-center" #clock display-format="HH:mm" value="" [(ngModel)]="time"
-              display-timezone="utc" placeholder="กรุณาเลือก">
-            </ion-datetime>
-          <!-- </ion-col> -->
+          <ion-datetime class="ion-text-center" #clock display-format="HH:mm" value="" [(ngModel)]="time"
+            display-timezone="utc" placeholder="กรุณาเลือก">
+          </ion-datetime>
           <ion-icon slot="end" name="alarm-outline"> </ion-icon>
         </ion-item>
 
@@ -179,7 +232,7 @@
             <ion-select-option value="4">4</ion-select-option>
           </ion-select>
         </ion-item>
-      </ion-list>
+      </ion-list> -->
 
       <ion-list lines="none">
         <ion-radio-group>
@@ -239,7 +292,7 @@
       </ion-card>
 
       <ion-card>
-        <ion-card-content >
+        <ion-card-content>
           <ion-item class="ion-text-center">
             <ion-col size="2">
               ไอดี
@@ -331,13 +384,13 @@
       <ion-row>
         <ion-col size="9"></ion-col>
         <ion-col size="1">
-          <ion-button expand="block" color="primary" block type="">บันทึก</ion-button>
+          <ion-button expand="block" color="primary" type="">บันทึก</ion-button>
         </ion-col>
         <ion-col size="1">
-          <ion-button expand="block" color="danger" block type="">ยกเลิก</ion-button>
+          <ion-button expand="block" color="danger" type="">ยกเลิก</ion-button>
         </ion-col>
         <ion-col size="1">
-          <ion-button expand="block" color="warning" block type="">แก้ไข</ion-button>
+          <ion-button expand="block" color="warning" type="">แก้ไข</ion-button>
         </ion-col>
       </ion-row>
     </ng-container>
