--- a/PrompimanFront/src/app/uistandard/uistandard.page.html
+++ b/PrompimanFront/src/app/uistandard/uistandard.page.html
@@ -400,6 +400,8 @@
           <ion-button expand="block" color="warning" type="">แก้ไข</ion-button>
         </ion-col>
       </ion-row>
+
+      <app-datetime></app-datetime>
     </ng-container>
   </ng-container>
 </ion-content>
