--- a/PrompimanFront/src/components/datetime/datetime.component.html
+++ b/PrompimanFront/src/components/datetime/datetime.component.html
@@ -1,8 +1,10 @@
-<ion-item ion-input>
+<form [formGroup]="FormItem">
+
+  <!-- <ion-item ion-input>
   <ion-col size="2">
     <ion-label> วันที่ </ion-label>
   </ion-col>
-  <ion-input type="date" >
+  <ion-input type="date">
   </ion-input>
 </ion-item>
 
@@ -15,9 +17,45 @@
     </ion-datetime>
   </div>
   <ion-icon slot="end" name="alarm-outline"> </ion-icon>
-</ion-item>
+</ion-item> -->
+  <ion-item class="row">
+    <ion-col size="2">
+      <ion-label> วันที่ </ion-label>
+    </ion-col>
+    <mbsc-calendar [class.invalid]="isValid('date')" [options]="datetimeSettings1" placeholder="กรุณาเลือก"
+      formControlName="date">
+    </mbsc-calendar>
+    <!-- <ion-icon slot="end" name="calendar-outline"> </ion-icon> -->
+  </ion-item>
+  <ion-item *ngIf="isValid('date')">
+    <ion-col size="2"></ion-col>
+    <span class="invalid-msg">
+      กรุณาเลือก
+    </span>
+  </ion-item>
 
-<!-- <mbsc-form>
+  <ion-item class="row">
+    <ion-col size="2">
+      <ion-label> Time </ion-label>
+    </ion-col>
+    <mbsc-calendar [class.invalid]="isValid('time')" formControlName="time" [options]="datetimeSettings2"
+      placeholder="กรุณาเลือก"></mbsc-calendar>
+    <!-- <ion-icon slot="end" name="alarm-outline"> </ion-icon> -->
+  </ion-item>
+  <ion-item *ngIf="isValid('time')">
+    <ion-col size="2"></ion-col>
+    <span class="invalid-msg">
+      กรุณาเลือก
+    </span>
+  </ion-item>
+
+
+
+
+
+
+
+  <!-- <mbsc-form>
   <div class="mbsc-grid mbsc-no-padding">
     <div class="mbsc-row mbsc-justify-content-center">
       <div class="mbsc-col-xl-5 mbsc-col-md-6">
@@ -56,5 +94,4 @@
     </div>
   </div>
 </mbsc-form> -->
-
-
+</form>
